安裝 bulma 修改 sign up 頁面

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,12 @@
-<%= form_for(@user) do |f| %>
+<h1 class="title">SIGN UP</h1>
+<hr>
+<%= form_for(@user,html: {class: 'x'}) do |f| %>
   <div class="field">
-    <%= f.text_field :email, placeholder: 'Email' %>
+    <%= f.text_field :email, placeholder: 'Email', class: 'input is-medium' %>
   </div>
   <div class="field">
-    <%= f.password_field :password, placeholder: 'Password' %>
+    <%= f.password_field :password, placeholder: 'Password', class: 'input is-medium' %>
   </div>
-  <%= f.submit 'Sign Up' %>
+  <hr>
+  <%= f.submit 'Sign Up', class: 'button is-dark is-medium' %>
 <% end %>
