--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,8 +12,9 @@
  *
  *= require_tree .
  *= require_self
+ *= require bulma/bulma.css
  */
 
- html {
-   background-color: grey;
- }
+.title {
+  margin-top: 5em;
+}
