--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="has-background-grey">
   <head>
     <title>MyDevise1</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,6 +11,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <section class="container">
+      <%= yield %>
+    </section>
   </body>
 </html>
